localized js function calls

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
-
-<!-- d3 -->
 <script src="//d3js.org/d3.v3.min.js"></script>
-
-<!-- jquery -->
 <script type="text/javascript" src="https://s3.amazonaws.com/duhaime-shakespeare/js/jquery-1.7.2.min.js"></script>
 
 <!-- Words Spoken by Character Entrance Plot -->
@@ -15,8 +11,7 @@
   font: 13px sans-serif;
 }
 
-#characterWords .axis path,
-.axis line {
+#characterWords .axis path, .axis line {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
@@ -34,39 +29,42 @@
 <div id="characterWords"></div>
 <script>
 
-var margin = {top: 20, right: 20, bottom: 50, left: 75},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-var x = d3.scale.linear()
-    .range([0, width]);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var color = d3.scale.ordinal()
-  .range(["#17becf", "#d62728"]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left");
-
-var tooltip = d3.select("#characterWords").append("div")
-    .attr("class", "tooltip")
-    .style("opacity", 1);
-
-var svg = d3.select("#characterWords").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
 d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", function(error, data) {
   if (error) throw error;
+
+  var vizDiv = "#characterWords";
+  var vizDivStr = vizDiv.replace("#","");
+  
+  var margin = {top: 20, right: 20, bottom: 50, left: 75},
+      width = 960 - margin.left - margin.right,
+      height = 500 - margin.top - margin.bottom;
+
+  var x = d3.scale.linear()
+      .range([0, width]);
+
+  var y = d3.scale.linear()
+      .range([height, 0]);
+
+  var color = d3.scale.ordinal()
+    .range(["#17becf", "#d62728"]);
+
+  var xAxis = d3.svg.axis()
+      .scale(x)
+      .orient("bottom");
+
+  var yAxis = d3.svg.axis()
+      .scale(y)
+      .orient("left");
+
+  var tooltip = d3.select(vizDiv).append("div")
+      .attr("class", "tooltip")
+      .style("opacity", 1);
+
+  var svg = d3.select(vizDiv).append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
   x.domain(d3.extent(data, function(d) { return d.entrance; })).nice();
   y.domain(d3.extent(data, function(d) { return d.words; })).nice();
@@ -110,9 +108,9 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
           .style("opacity", .96);  
           tooltip.html(d.name + " (" + d.play + ")") 
                    .style("left", (parseInt(d3.select(this).attr("cx")) + 
-                        document.getElementById("characterWords").offsetLeft) +78 + "px")     
+                        document.getElementById(vizDivStr).offsetLeft) +78 + "px")     
                    .style("top", (parseInt(d3.select(this).attr("cy")) +
-                        document.getElementById("characterWords").offsetTop) +5 + "px") 
+                        document.getElementById(vizDivStr).offsetTop) +5 + "px") 
                    .style("background-color", '#ffffff')
                    .style("width", 8.75 * (d.name.length + d.play.length + 2) + "px")
                    .style("height", 15 + "px"); 
@@ -154,8 +152,160 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
 </script>
 
 
+<!-- max and min words by gender plot -->
+<style>
+#minMaxWords {
+  display: flex;
+  font: 13px sans-serif;
+}
 
-<!-- Character Cooccurrence Plot -->
+#minMaxWords .axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+#minMaxWords .dot {
+  stroke: #000;
+}
+
+#minMaxWords .tooltip {
+  position: absolute;
+  pointer-events: none;
+}
+</style>
+
+<div id="minMaxWords"></div>
+
+<script>
+d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", function(error, data) {
+  if (error) throw error;
+
+  var vizDiv = "#minMaxWords";
+  var vizDivStr = vizDiv.replace("#","");
+
+  var margin = {top: 20, right: 20, bottom: 50, left: 75},
+      width = 960 - margin.left - margin.right,
+      height = 500 - margin.top - margin.bottom;
+
+  var x = d3.scale.linear()
+      .range([0, width]);
+
+  var y = d3.scale.linear()
+      .range([height, 0]);
+
+  var color = d3.scale.ordinal()
+    .range(["#17becf", "#d62728"]);
+
+  var xAxis = d3.svg.axis()
+      .scale(x)
+      .orient("bottom");
+
+  var yAxis = d3.svg.axis()
+      .scale(y)
+      .orient("left");
+
+  var tooltip = d3.select(vizDiv).append("div")
+      .attr("class", "tooltip")
+      .style("opacity", 1);
+
+  var svg = d3.select(vizDiv).append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  x.domain(d3.extent(data, function(d) { return d.entrance; })).nice();
+  y.domain(d3.extent(data, function(d) { return d.words; })).nice();
+
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis)
+    .append("text")
+      .attr("class", "label")
+      .attr("x", width/2 + 160)
+      .attr("y", +45)
+      .style("text-anchor", "end")
+      .text("Words spoken before character enters play")
+      .style("font-size","16px");
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("class", "label")
+      .attr("transform", "rotate(-90)")
+      .attr("y", -60)
+      .attr("x", -100)
+      .style("text-anchor", "end")
+      .text("Words spoken by character")
+      .style("font-size", "16px");
+
+  svg.selectAll(".dot")
+      .data(data)
+    .enter().append("g")
+      .attr("class", "playTitle")
+    .append("text")
+      .attr("dx", function(d) { return x(d.entrance); })
+      .attr("dy", function(d) { return y(d.words); })
+      .text(function(d) { return d.name; })
+      .style("fill",function(d) { return color(d.gender);})
+      .on("mouseover", function(d) {
+          console.log(d);
+          tooltip.transition()
+          .duration(200)
+          .style("opacity", .96);  
+          tooltip.html(d.name + " (" + d.play + ")") 
+                   .style("left", (parseInt(d3.select(this).attr("dx")) + 
+                        document.getElementById(vizDivStr).offsetLeft) +78 + "px")     
+                   .style("top", (parseInt(d3.select(this).attr("dy")) +
+                        document.getElementById(vizDivStr).offsetTop) +5 + "px") 
+                   .style("background-color", '#ffffff')
+                   .style("width", 8.75 * (d.name.length + d.play.length + 2) + "px")
+                   .style("height", 15 + "px"); 
+          })
+          .on("mouseout", function(d) {
+              tooltip.transition()
+                   .duration(500)
+                   .style("opacity", 0);
+          });   
+
+
+
+
+
+  var legend = svg.selectAll(".legend")
+      .data(color.domain())
+    .enter().append("g")
+      .attr("class", "legend")
+      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+
+  legend.append("rect")
+      .attr("x", width - 18)
+      .attr("width", 18)
+      .attr("height", 18)
+      .style("fill", color);
+
+  legend.append("text")
+      .attr("x", width - 24)
+      .attr("y", 9)
+      .attr("dy", ".35em")
+      .style("text-anchor", "end")
+      .text(function(d) { 
+        if (d === 1) {
+          return "male";
+        } else {
+        if (d === 2) {
+          return "female";
+          }
+        } 
+      });
+});
+</script>
+
+
+<!-- character cooccurrence plot -->
 
 <style>
 #cooccurrence {
