set div height for constant vertial loading

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 #characterWords {
   display: flex;
   font: 13px sans-serif;
+  height: 500px;
 }
 
 #characterWords .axis path, .axis line {
@@ -157,6 +158,7 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
 #minMaxWords {
   display: flex;
   font: 13px sans-serif;
+  height: 500px;
 }
 
 #minMaxWords .axis path, .axis line {
