--- a/index.html
+++ b/index.html
@@ -30,11 +30,25 @@
 <div id="characterWords"></div>
 <script>
 
+// global function that will return width of text
+function getTextWidth(text, font) {
+    // re-use canvas object for better performance
+    var canvas = getTextWidth.canvas || (getTextWidth.canvas = document.createElement("canvas"));
+    var context = canvas.getContext("2d");
+    context.font = font;
+    var metrics = context.measureText(text);
+    return metrics.width;
+};
+
 d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", function(error, data) {
   if (error) throw error;
 
+  // specify div (id) to which we'll attach svg 
   var vizDiv = "#characterWords";
   var vizDivStr = vizDiv.replace("#","");
+
+  // specify font spec
+  var fontSpec = "13pt Arial";
   
   var margin = {top: 20, right: 20, bottom: 50, left: 75},
       width = 960 - margin.left - margin.right,
@@ -113,7 +127,7 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
                    .style("top", (parseInt(d3.select(this).attr("cy")) +
                         document.getElementById(vizDivStr).offsetTop) +5 + "px") 
                    .style("background-color", '#ffffff')
-                   .style("width", 8.75 * (d.name.length + d.play.length + 2) + "px")
+                   .style("width", getTextWidth(d.name, fontSpec) + getTextWidth(d.play, fontSpec) + 2 + "px")
                    .style("height", 15 + "px"); 
           })
           .on("mouseout", function(d) {
@@ -180,11 +194,15 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
 <div id="minMaxWords"></div>
 
 <script>
-d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", function(error, data) {
+d3.json("https://s3.amazonaws.com/duhaime-shakespeare/min_max_words.json", function(error, data) {
   if (error) throw error;
 
+  // specify the div (id) to which we'll attach the svg
   var vizDiv = "#minMaxWords";
   var vizDivStr = vizDiv.replace("#","");
+
+  // specify font spec
+  fontSpec = "bold 13pt Arial";
 
   var margin = {top: 20, right: 20, bottom: 50, left: 75},
       width = 960 - margin.left - margin.right,
@@ -217,8 +235,8 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
     .append("g")
       .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-  x.domain(d3.extent(data, function(d) { return d.entrance; })).nice();
-  y.domain(d3.extent(data, function(d) { return d.words; })).nice();
+  x.domain(d3.extent(data, function(d) { return d.min["val"]; })).nice();
+  y.domain(d3.extent(data, function(d) { return d.max["val"]; })).nice();
 
   svg.append("g")
       .attr("class", "x axis")
@@ -226,10 +244,10 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
       .call(xAxis)
     .append("text")
       .attr("class", "label")
-      .attr("x", width/2 + 160)
+      .attr("x", width/2 + 180)
       .attr("y", +45)
       .style("text-anchor", "end")
-      .text("Words spoken before character enters play")
+      .text("Words spoken before first {male, female} enters play")
       .style("font-size","16px");
 
   svg.append("g")
@@ -239,9 +257,9 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
       .attr("class", "label")
       .attr("transform", "rotate(-90)")
       .attr("y", -60)
-      .attr("x", -100)
+      .attr("x", -30)
       .style("text-anchor", "end")
-      .text("Words spoken by character")
+      .text("Words spoken before last {male, female} enters play")
       .style("font-size", "16px");
 
   svg.selectAll(".dot")
@@ -249,33 +267,34 @@ d3.json("https://s3.amazonaws.com/duhaime-shakespeare/words_by_entrance.json", f
     .enter().append("g")
       .attr("class", "playTitle")
     .append("text")
-      .attr("dx", function(d) { return x(d.entrance); })
-      .attr("dy", function(d) { return y(d.words); })
-      .text(function(d) { return d.name; })
+      .attr("dx", function(d) { return x(d.min["val"]); })
+      .attr("dy", function(d) { return y(d.max["val"]); })
+      .text(function(d) { return d.play; })
       .style("fill",function(d) { return color(d.gender);})
       .on("mouseover", function(d) {
           console.log(d);
           tooltip.transition()
           .duration(200)
           .style("opacity", .96);  
-          tooltip.html(d.name + " (" + d.play + ")") 
-                   .style("left", (parseInt(d3.select(this).attr("dx")) + 
-                        document.getElementById(vizDivStr).offsetLeft) +78 + "px")     
-                   .style("top", (parseInt(d3.select(this).attr("dy")) +
-                        document.getElementById(vizDivStr).offsetTop) +5 + "px") 
-                   .style("background-color", '#ffffff')
-                   .style("width", 8.75 * (d.name.length + d.play.length + 2) + "px")
-                   .style("height", 15 + "px"); 
+          var currentGender = d.gender;
+          tooltip.html("first: " + d.min["name"] + "</br>" +
+                   "last: " + d.max["name"]) 
+               .style("left", (parseInt(d3.select(this).attr("dx")) + 
+                    document.getElementById(vizDivStr).offsetLeft) +97 + "px")     
+               .style("top", (parseInt(d3.select(this).attr("dy")) +
+                    document.getElementById(vizDivStr).offsetTop) -16 + "px") 
+               .style("background-color", '#ffffff')
+               .style("width", getTextWidth(d.max["name"], fontSpec) >
+                    getTextWidth(d.min["name"], fontSpec) ? 
+                    getTextWidth(d.max["name"], fontSpec) : 
+                    getTextWidth(d.min["name"], fontSpec))
+               .style("height", 30 + "px")
           })
           .on("mouseout", function(d) {
               tooltip.transition()
                    .duration(500)
                    .style("opacity", 0);
           });   
-
-
-
-
 
   var legend = svg.selectAll(".legend")
       .data(color.domain())
